<resources>
    <string name="app_name">NA Android Checkout Demo</string>

    <string name="demo_pay_button">Pay by Card</string>
    <string name="demo_pay_label">Launch the NA Android Checkout demo</string>

    <string name="demo_checkout_cancelled">Checkout was cancelled</string>
    <string name="demo_checkout_error">Checkout returned an error!</string>
    <string name="demo_checkout_token">XXX-XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX</string>

    <string name="demo_settings_label_title">Use defaults for:</string>

    <string name="demo_settings_label_image">Image</string>
    <string name="demo_settings_label_billing">Billing</string>
    <string name="demo_settings_label_shipping">Shipping</string>
    <string name="demo_settings_label_theme">Theme</string>
    <string name="demo_settings_label_timeout">Timeout</string>
</resources>
