<!--
  ~ Copyright (c) 2017 Bambora.
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bambora.na.CheckoutDemo.activities.MainActivity">

    <!--Settings-->
    <TableLayout
        android:id="@+id/demo_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_padding"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/demo_settings_label"
                style="@style/TitleText"
                android:layout_span="3"
                android:text="@string/demo_settings_label_title" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/demo_checkbox_image"
                style="@style/DemoCheckBox"
                android:text="@string/demo_settings_label_image" />

            <CheckBox
                android:id="@+id/demo_checkbox_theme"
                style="@style/DemoCheckBox"
                android:text="@string/demo_settings_label_theme" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/demo_checkbox_billing"
                style="@style/DemoCheckBox"
                android:text="@string/demo_settings_label_billing" />

            <CheckBox
                android:id="@+id/demo_checkbox_shipping"
                style="@style/DemoCheckBox"
                android:text="@string/demo_settings_label_shipping" />

            <CheckBox
                android:id="@+id/demo_checkbox_timeout"
                style="@style/DemoCheckBox"
                android:text="@string/demo_settings_label_timeout" />
        </TableRow>
    </TableLayout>

    <!--Title-->
    <TextView
        android:id="@+id/demo_pay_label"
        style="@style/TitleText"
        android:layout_alignParentTop="false"
        android:layout_below="@id/demo_settings"
        android:padding="@dimen/button_padding"
        android:text="@string/demo_pay_label" />

    <!--Button-->
    <Button
        android:id="@+id/demo_pay_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/demo_pay_label"
        android:layout_margin="@dimen/button_margin"
        android:gravity="center"
        android:text="@string/demo_pay_button" />

    <!--Results-->
    <TextView
        android:id="@+id/demo_checkout_error"
        style="@style/ErrorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/demo_pay_button"
        android:gravity="center"
        android:text=""
        android:visibility="visible" />

    <TextView
        android:id="@+id/demo_checkout_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/demo_checkout_error"
        android:gravity="center"
        android:text="@string/demo_checkout_token"
        android:visibility="gone" />
</RelativeLayout>
